--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,10 @@
+*.php linguist-vendored
+
+*.html linguist-vendored
+
 *.js linguist-vendored
+
+.htaccess linguist-vendored
+
+*.css linguist-vendored
+*.scss linguist-vendored
